--- a/Classwork/Section2/Nile.Windows/Nile.Windows.csproj
+++ b/Classwork/Section2/Nile.Windows/Nile.Windows.csproj
@@ -78,5 +78,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nile\Nile.csproj">
+      <Project>{0a1b870c-962f-43d3-9f71-7f483cf560ac}</Project>
+      <Name>Nile</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
